confmania,fix for no words visible in Aero Fox Theme
old-svn-revision:65

--- a/chrome/skin/classic/confmania/preferences.css
+++ b/chrome/skin/classic/confmania/preferences.css
@@ -7,6 +7,7 @@
   -moz-border-bottom-colors: ThreeDHighlight ThreeDLightShadow;
   -moz-border-left-colors: ThreeDShadow ThreeDDarkShadow;
   background-color: -moz-Field;
+  color: -moz-FieldText;
 
   overflow-y: auto;
 }
